Tue Sep 10 17:55:37 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: fix dependency problem rebuilding html files
	* src/dblib/Makefile.am: add always dbopen.c

Tue Sep 10 10:37:00 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h src/dblib/dblib.c:
	- Fix compilation when configured with --with-tdsver=8.0

Tue Sep 10 15:18:49 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: more check building html docs
	* src/Makefile.am: include always odbc in distribution

Mon Sep  9 21:31:39 EDT 2002	Brian Bruns <camber@ais.org>
	* src/tds/read.c: patch from lbayuk@mindspring.com to correct cancel 
	handling w/PHP

Mon Sep  9 12:30:55 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* .cvsignore include/.cvsignore src/apps/.cvsignore
	  src/odbc/unittests/.cvsignore src/pool/.cvsignore:
	- ignore more configuration turds.

Mon Sep  9 16:17:23 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: distribute only compiled man

Mon Sep  9 10:13:17 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am doc/Makefile.am doc/txt2man:
	- make and make distcheck work

Sun Sep  8 21:34:35 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* src/tds/util.c	patch from lbayuk on 7 September to fix some 
				formatting problems in the log

Sun Sep  8 19:41:41 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* R0_60 release tag applied; release candidate #1 for 0.60!
	* doc/userguide.sgml	conforms to release 0.60, added locale
	* doc/Makefile		removed
	* doc/Makefile.am	added, puts doc directory into the main make
	* Makefile.am		added doc directory and userguide.tgz
	* configure.in		added doc directory
	
Sun Sep  8 08:54:07 EDT 2002	Brian Bruns <camber@ais.org>
	* src/tds/read.c(tds_get_byte): change precedence on empty packet sink.
	* src/tds/config.c(tds_read_conf_file): consolidated redundant code into 
       tds_try_conf_file().  Added check for conf file added programmatically